--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stock-sync-lamp",
   "version": "1.0.0",
-  "description": "Service for synchronizing stock data from API to MySQL database",
+  "description": "Service for synchronizing stock data from API to MS SQL database",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -14,7 +14,7 @@
   "keywords": [
     "stock",
     "sync",
-    "mysql",
+    "mssql",
     "express"
   ],
   "author": "",
@@ -22,7 +22,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "sequelize": "^6.35.2",
-    "mysql2": "^3.6.5",
+    "tedious": "^16.6.1",
     "node-cron": "^3.0.3",
     "dotenv": "^16.3.1",
     "axios": "^1.6.2"
