Add data validation and logging enhancements in SyncService; introduce checkData script for database integrity verification

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server.js",
     "test:api": "node test/testApi.js",
     "test:db": "node test/testDatabase.js",
+    "check:data": "node test/checkData.js",
     "install:service": "node install-service-windows.js",
     "uninstall:service": "node uninstall-service-windows.js"
   },
