--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sequelize": "^6.35.2",
     "tedious": "^16.6.1",
     "node-cron": "^3.0.3",
+    "cron-parser": "^4.9.0",
     "dotenv": "^16.3.1",
     "axios": "^1.6.2"
   },
